--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,36 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.cn21.tinkertest.MainActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World12345!"/>
+        android:text="加载补丁"
+        android:onClick="loadPatch"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="62dp" android:layout_centerHorizontal="true"/>
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="崩溃"
+        android:onClick="crash"
+        android:layout_below="@+id/button" android:layout_centerHorizontal="true"
+        android:layout_marginTop="26dp"/>
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="补丁信息"
+        android:onClick="showLog"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp" android:layout_centerVertical="true"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="清除补丁"
+        android:id="@+id/button2"
+        android:onClick="cleanPatch"
+        android:layout_marginTop="31dp" android:layout_below="@+id/button4"
+        android:layout_centerHorizontal="true"/>
 </RelativeLayout>
